# commerzbank-fints

./: BUILD_ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_QUICK_REFERENCE.md  BUILD_SYSTEM_SUMMARY.md  CHANGELOG.md  DEPLOYMENT_README.md  README.md  TEST_EXECUTION_GUIDE.md  TEST_SUITE_SUMMARY.md  USER_GUIDE.md  commerzbank_fints.spec  commerzbank_fints_fast.spec  commerzbank_fints_minimal.spec  commerzbank_fints_qt_desktop_app.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_pyinstaller_hanging.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-cross-platform.yml  build-windows.yml  ci-notification.yml  ci.yml  merge-protection.yml  test-report.yml
.moai/config/sections/: quality.yaml  system.yaml
.moai/project/: interview.md  product.md  structure.md  tech.md
.moai/project/codemaps/: README.md  data-flow.md  dependencies.md  entry-points.md  modules.md  overview.md
.moai/reports/plan-audit/: PROJECT-review-1.md  PROJECT-review-2.md
.moai/state/: db-detection.json
build-assets/: version_info.txt
screenshots/: README.md
tests/: CI-CD-CONFIG.md  README.md  conftest.py  test_data_import.py  test_error_handling.py  test_financial_calculations.py  test_iban_validation.py  test_thread_coordination.py
