[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commerzbank_fints_qt_desktop_app"
version = "1.0.0"
description = "Commerzbank FinTS PhotoTAN Desktop Application - Batch payout automation tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CJ-1981"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.0.0",
    "fints>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/CJ-1981/commerzbank-fints"
Repository = "https://github.com/CJ-1981/commerzbank-fints"
Issues = "https://github.com/CJ-1981/commerzbank-fints/issues"

[project.scripts]
commerzbank-fints = "commerzbank_fints_qt_desktop_app:main"

[tool.setuptools]
py-modules = ["commerzbank_fints_qt_desktop_app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["commerzbank_fints_qt_desktop_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
qt_api = "pyqt6"